[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets_test/material/Dom Casual Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://levels/scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://levels/scripts/RecordTimes/rec01Time.gd" type="Script" id=3]
[ext_resource path="res://levels/scripts/RecordTimes/rec02Time.gd" type="Script" id=4]
[ext_resource path="res://levels/scripts/RecordTimes/rec03Time.gd" type="Script" id=5]
[ext_resource path="res://levels/scripts/RecordTimes/rec04Time.gd" type="Script" id=6]
[ext_resource path="res://assets_test/material/TitleAlablaster.png" type="Texture" id=7]
[ext_resource path="res://assets_test/material/Main_Menu_Background.png" type="Texture" id=8]
[ext_resource path="res://Music/GameMenu[Alablaster].wav" type="AudioStream" id=9]

[sub_resource type="ImageTexture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 0.005
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.215686, 0.227451, 0.478431, 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1088.0
margin_bottom = 1508.0
rect_min_size = Vector2( 960, 540 )
rect_scale = Vector2( 0.47, 0.27 )
texture = ExtResource( 8 )

[node name="TitleCard" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -270.0
margin_top = 30.0
margin_right = 793.0
margin_bottom = 191.0
rect_min_size = Vector2( 300, 50 )
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="BtnCenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BtnVBoxContainer" type="VBoxContainer" parent="BtnCenterContainer"]
margin_left = 330.0
margin_top = 77.0
margin_right = 630.0
margin_bottom = 462.0
rect_min_size = Vector2( 300, 200 )
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="BtnCenterContainer/BtnVBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = SubResource( 3 )

[node name="Space" type="Control" parent="BtnCenterContainer/BtnVBoxContainer"]
margin_top = 60.0
margin_right = 300.0
margin_bottom = 60.0

[node name="Button01" type="Button" parent="BtnCenterContainer/BtnVBoxContainer"]
margin_top = 70.0
margin_right = 300.0
margin_bottom = 125.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 1 )
text = "Level 1"

[node name="Button02" type="Button" parent="BtnCenterContainer/BtnVBoxContainer"]
margin_top = 135.0
margin_right = 300.0
margin_bottom = 190.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 1 )
text = "Level 2"

[node name="Button03" type="Button" parent="BtnCenterContainer/BtnVBoxContainer"]
margin_top = 200.0
margin_right = 300.0
margin_bottom = 255.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 1 )
text = "Level 3"

[node name="Button04" type="Button" parent="BtnCenterContainer/BtnVBoxContainer"]
margin_top = 265.0
margin_right = 300.0
margin_bottom = 320.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 1 )
text = "Level 4"

[node name="Button05" type="Button" parent="BtnCenterContainer/BtnVBoxContainer"]
margin_top = 330.0
margin_right = 300.0
margin_bottom = 385.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 1 )
text = "Bye Bye"

[node name="TimeCenterContainer" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -190.0
margin_right = -100.0
margin_bottom = 125.0
rect_min_size = Vector2( 200, 310 )

[node name="TimeVBoxContainer" type="VBoxContainer" parent="TimeCenterContainer"]
margin_right = 200.0
margin_bottom = 315.0
rect_min_size = Vector2( 200, 300 )
custom_constants/separation = 20

[node name="RecordTimes" type="Label" parent="TimeCenterContainer/TimeVBoxContainer"]
margin_right = 200.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )

[node name="recTime01" type="Label" parent="TimeCenterContainer/TimeVBoxContainer"]
margin_top = 67.0
margin_right = 200.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.215686, 0.909804, 0.0470588, 1 )
custom_fonts/font = SubResource( 2 )
text = "00:00:000"
script = ExtResource( 3 )

[node name="recTime02" type="Label" parent="TimeCenterContainer/TimeVBoxContainer"]
margin_top = 134.0
margin_right = 200.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0.215686, 0.909804, 0.0470588, 1 )
custom_fonts/font = SubResource( 2 )
text = "00:00:000"
script = ExtResource( 4 )

[node name="recTime03" type="Label" parent="TimeCenterContainer/TimeVBoxContainer"]
margin_top = 201.0
margin_right = 200.0
margin_bottom = 248.0
custom_colors/font_color = Color( 0.215686, 0.909804, 0.0470588, 1 )
custom_fonts/font = SubResource( 2 )
text = "00:00:000"
script = ExtResource( 5 )

[node name="recTime04" type="Label" parent="TimeCenterContainer/TimeVBoxContainer"]
margin_top = 268.0
margin_right = 200.0
margin_bottom = 315.0
custom_colors/font_color = Color( 0.215686, 0.909804, 0.0470588, 1 )
custom_fonts/font = SubResource( 2 )
text = "00:00:000"
script = ExtResource( 6 )

[node name="InfoCenterContainer" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -35.0
margin_right = 458.0
margin_bottom = 265.0
rect_min_size = Vector2( 200, 290 )

[node name="InfoVBoxContainer" type="VBoxContainer" parent="InfoCenterContainer"]
margin_left = 12.0
margin_right = 440.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 300 )
custom_constants/separation = 10

[node name="RollInfo" type="Label" parent="InfoCenterContainer/InfoVBoxContainer"]
margin_right = 428.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "WASD = To Roll"

[node name="CamInfo" type="Label" parent="InfoCenterContainer/InfoVBoxContainer"]
margin_top = 57.0
margin_right = 428.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "Arrow Keys = Camera"

[node name="JumpInfo" type="Label" parent="InfoCenterContainer/InfoVBoxContainer"]
margin_top = 114.0
margin_right = 428.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 2 )
text = "Space = Jump"

[node name="PauseInfo" type="Label" parent="InfoCenterContainer/InfoVBoxContainer"]
margin_top = 171.0
margin_right = 428.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 2 )
text = "Enter = Pause"

[node name="ObjectiveInfo" type="Label" parent="InfoCenterContainer/InfoVBoxContainer"]
margin_top = 228.0
margin_right = 428.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 2 )
text = "Collect 5 Gems and get to the Ring"

[node name="Credits" type="CenterContainer" parent="."]
margin_left = 610.0
margin_top = 520.0
margin_right = 1010.0
margin_bottom = 620.0
rect_min_size = Vector2( 150, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
margin_left = 89.0
margin_right = 310.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 100 )

[node name="Credits" type="Label" parent="Credits/VBoxContainer"]
margin_right = 221.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Credits: MetaJ, Amanda N, Hailey G"

[connection signal="pressed" from="BtnCenterContainer/BtnVBoxContainer/Button01" to="." method="_on_Button01_pressed"]
[connection signal="pressed" from="BtnCenterContainer/BtnVBoxContainer/Button02" to="." method="_on_Button02_pressed"]
[connection signal="pressed" from="BtnCenterContainer/BtnVBoxContainer/Button03" to="." method="_on_Button03_pressed"]
[connection signal="pressed" from="BtnCenterContainer/BtnVBoxContainer/Button04" to="." method="_on_Button04_pressed"]
[connection signal="pressed" from="BtnCenterContainer/BtnVBoxContainer/Button05" to="." method="_on_Button05_pressed"]
